# ft_vox

./: .gitignore  Makefile  README.md  meson.build  vsupp
shaders/: chunk.frag  chunk.vert  chunkBorder.frag  chunkBorder.vert  chunkFdf.frag  fdf.frag  mesh.frag  mesh.vert  meshFront.frag  meshUp.frag  skybox.frag  skybox.vert  text.frag  text.vert
srcs/: define.hpp
srcs/engine/: engine.cpp  engine.hpp
srcs/engine/camera/: BoundingCube.hpp  Camera.cpp  Camera.hpp
srcs/engine/inputs/: Mouse.cpp  Mouse.hpp
srcs/engine/mesh/: Mesh.cpp  Mesh.hpp  StagingBuffer.hpp  VertexPos.cpp  VertexPos.hpp  VertexPosNrm.cpp  VertexPosNrm.hpp  VertexPosTex.cpp  VertexPosTex.hpp  VertexVoxel.cpp  VertexVoxel.hpp
srcs/engine/shader/: Shader.cpp  Shader.hpp  ShaderParam.cpp  ShaderParam.hpp
srcs/engine/textures/: TextureManager.cpp  TextureManager.hpp
srcs/engine/ui/: Text.cpp  Text.hpp
srcs/engine/vulkan/: VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanQueue.hpp  VulkanUtils.cpp  VulkanUtils.hpp
srcs/engine/window/: Window.cpp  Window.hpp
srcs/program/: main.cpp  shaderStruct.hpp
srcs/program/bytes/: bitFunctions.cpp  bitFunctions.hpp  uint256_t.cpp  uint256_t.hpp
srcs/program/loop/: computation.cpp  draw.cpp  init.cpp  loop.hpp
srcs/program/map/: Chunk.cpp  Chunk.hpp  Chunk_generation.cpp  Chunk_meshing.cpp  Cluster.cpp  Cluster.hpp  Cube.hpp  CubeBitmap.hpp  Map.cpp  Map.hpp  Map_update.cpp  Perlin.cpp  Perlin.hpp  PerlinNoise.cpp  PerlinNoise.hpp
srcs/program/perfLogger/: PerfLogger.cpp  PerfLogger.hpp
srcs/program/skybox/: Skybox.cpp  Skybox.hpp
